--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,16 @@ spring.datasource.username=
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = validate
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.jdbc.batch_size=1000
 spring.servlet.multipart.max-file-size=6000KB
 spring.servlet.multipart.max-request-size=6000KB
-spring.jpa.properties.hibernate.default_schema=public
+spring.jpa.properties.hibernate.default_schema=secured
+spring.jpa.open-in-view=false
+
+#Hashing algorithm to encrypt the Password
+hashing.algorithm=MD5
+
+server.servlet.context-path=/cargaraage_api
