made chnages to the token generator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,6 @@ spring.jpa.open-in-view=false
 #Hashing algorithm to encrypt the Password
 hashing.algorithm=MD5
 
-server.servlet.context-path=/cargaraage_api
+server.servlet.context-path=/auth
+
+server.port=8081
